docs: record quality/hardening backlog from load + security work
Add a backlog section: centralize the posting gate (PostingPolicy — note the
repost/quote bypass of verified-only mode), move the rate-limit bucket store to a
bounded Caffeine cache, re-tune JVM/memory for Render free tier, deep
authenticated DAST, and re-run k6 against the deployed instance.